syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "Identity.proto";
import "NullableGrpcDate.proto";

message UpdateCustomerRequest {
    int32 CustomerOnSAId = 1;
    
    repeated cis.types.Identity CustomerIdentifiers = 2;
    
    int32 CustomerRoleId = 3;
    
    string FirstNameNaturalPerson = 4;
    
    string Name = 5;
    
    cis.types.NullableGrpcDate DateOfBirthNaturalPerson = 6;
}
