syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";

message Expenses {
    google.protobuf.Int32Value SavingExpenseAmount = 1;
    
    google.protobuf.Int32Value InsuranceExpenseAmount = 2;
    
    google.protobuf.Int32Value HousingExpenseAmount = 3;
    
    google.protobuf.Int32Value OtherExpenseAmount = 4;
}