syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "HouseholdExpenses.proto";
import "HouseholdData.proto";

message UpdateHouseholdRequest {
    int32 HouseholdId = 1;

    DomainServices.SalesArrangementService.HouseholdData Data = 2;
    
    DomainServices.SalesArrangementService.Expenses Expenses = 3;
}
